#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([Algorithms], [0.2], [niklaus@mykolab.ch])
AM_INIT_AUTOMAKE([foreign])
#AC_CONFIG_SRCDIR([test/CheckingAccountTest.cpp])
AC_CONFIG_HEADERS([config.h])

AC_OUTPUT(Makefile src/Makefile test/Makefile)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
