AUTOMAKE_OPTIONS = foreign

AM_CXXFLAGS = -Wall -pipe

bin_PROGRAMS = binarySearch heapSort qSelect

binarySearch_SOURCES = binarysearch.cpp
binarySearch_LDADD = -lboost_program_options

heapSort_SOURCES = heapSort.cpp
heapSort_LDADD = -lboost_program_options

qSelect_SOURCES = qSelect.cpp
qSelect_LDADD = -lboost_program_options
